fixed white space

--- a/DARE/view/style.css
+++ b/DARE/view/style.css
@@ -404,7 +404,7 @@ footer {
     color: white;
     width: 100%;
     position: relative;
-    margin-top: 75px;
+    
 }
 
 
